--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "fastify": "^4.19.0"
+    "fastify": "^4.19.0",
+    "knex": "^2.4.2",
+    "sqlite3": "^5.1.6"
   }
 }
